--- a/templates/edit.html
+++ b/templates/edit.html
@@ -7,8 +7,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>        
 {% endfor%}
-{% if method == 'GET' %}
-<h4>{{title}}<br/>msg = {{msg}}</h4>
+<h4>{{title}}<br/></h4>
 <div class="container mt-5 mb-5 px-10 ">
     <div class="row">
         <div class="col-md-6 offset-md-3">
@@ -26,26 +25,4 @@
         </div>
     </div>
 </div>
-{% else %}
-<h4>{{title}}<br/>{{msg}} else block</h4>
-<div class="container mt-5 mb-5 px-10 ">
-    <div class="row">
-        <div class="col-md-6 offset-md-3">
-            <form method="POST" action="/editnote/{{title}}">
-                <div class="form-group">
-                    {{form.hidden_tag()}}
-                    {{form.Desc.label(class='form-label')}}
-                    {{form.Desc(class='form-control',value = msg)}}
-                    <small id="description" class="form-text text-muted"
-                        >E.g: I had complete English Breakfast.</small
-                    >
-                </div>
-                {{form.edit(class = 'btn btn-primary')}}
-            </form>
-        </div>
-    </div>
-</div>
-
-{%endif%}
-
 {%endblock%}
