--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -9,9 +9,6 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Actions
@@ -20,11 +17,8 @@
               <li><a class="dropdown-item" href="/addnote">Add Note</a></li>
               <li><a class="dropdown-item" href="/editnote">Edit Note</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Delete Note</a></li>
+              <li><a class="dropdown-item" href="/deletenote">Delete Note</a></li>
             </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
